--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,7 @@
 {
     "require": {
         "vlucas/phpdotenv": "^5.2",
-        "php": ">=7.2"
-    },
-    "require-dev": {
+        "php": ">=7.2",
         "phpunit/phpunit": "~8.0"
     }
 }
