--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "require": {
         "vlucas/phpdotenv": "^5.2",
-        "php": ">=7.2",
-        "phpunit/phpunit": "~8.0"
+        "php": ">=7.2"
     }
 }
