--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,14 @@
 {
+    "name": "dsmgpos/dsmgpos",
+    "description": "PHP Point of Sale.",
+    "keywords": ["POS", "Point of Sale"],
+    "license": "MIT",
+    "type": "project",
     "require": {
         "vlucas/phpdotenv": "^5.2",
         "php": ">=7.2"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~6.0"
     }
 }
