--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "vlucas/phpdotenv": "^5.2",
-        "php": ">=7.2"
+        "vlucas/phpdotenv": "^5.2"
     },
     "require-dev": {
         "phpunit/phpunit": "~6.0"
