--- a/env.dsmg.example
+++ b/env.dsmg.example
@@ -1,7 +1,7 @@
-DB_USER=""
-DB_PASS=""
-DB_HOST=""
-DB_NAME=""
+DB_USER="example"
+DB_PASS="example"
+DB_HOST="localhost"
+DB_NAME="example"
 
 TIMEZONE="Asia/Jakarta"
 
