--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,6 @@
         "vlucas/phpdotenv": "^5.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "^7"
     }
 }
